# rename_all

./: .gitignore  Cargo.toml  README.md  todo.md
src/: args.rs  filesystem.rs  main.rs
src/filesystem/: mod.rs
tests/: integration_test_args.rs  integration_test_change_files.rs  integration_test_change_paths.rs  integration_test_changes.rs  integration_tests.rs  integration_tests_args.rs  setup_test_folder.sh  test_helper.rs
